# GeoCoq

./: .gitignore  .travis.yml  AUTHORS  Ch02_cong.v  Ch03_bet.v  Ch04_col.v  Ch04_cong_bet.v  Ch05_bet_le.v  Ch06_out_lines.v  Ch07_midpoint.v  Ch08_orthogonality.v  Ch09_plane.v  Ch10_line_reflexivity.v  Ch10_line_reflexivity_2D.v  Ch11_angles.v  Ch12_parallel.v  Ch12_parallel_inter_dec.v  Ch13_1.v  Ch13_2_length.v  Ch13_3_angles.v  Ch13_4_cos.v  Ch13_5_Pappus_Pascal.v  Ch13_6_Desargues_Hessenberg.v  Ch14_order.v  Ch14_prod.v  Ch14_sum.v  Ch15_lengths.v  Changelog  CoappR.v  ColR.v  Coplanar_perm.v  Coplanar_trans.v  Coplanar_trans_1.v  Coplanar_trans_2.v  Coplanar_trans_3.v  Coplanar_trans_4.v  Euclid.v  Euclid_1.v  Euclid_2.v  Euclid_aux.v  (+68 more)
.nix/: config.nix
Axioms/: beeson_s_axioms.v  continuity_axioms.v  elementary_continuity.v  euclidean_axioms.v  hilbert_axioms.v  independent_tarski_axioms.v  makarios_variant_axioms.v  metric_axioms.v  parallel_postulates.v  tarski_axioms.v
Elements/: Book_1.v  Book_3.v
Elements/OriginalProofs/: book1.v  euclidean_tactics.v  general_tactics.v  lemma_10_12.v  lemma_21helper.v  lemma_26helper.v  lemma_35helper.v  lemma_3_5b.v  lemma_3_6b.v  lemma_3_7a.v  lemma_3_7b.v  lemma_4_19.v  lemma_8_2.v  lemma_8_3.v  lemma_8_7.v  lemma_9_5.v  lemma_9_5a.v  lemma_9_5b.v  lemma_ABCequalsCBA.v  lemma_Euclid4.v  lemma_NChelper.v  lemma_PGrectangle.v  lemma_Pasch_outer2.v  lemma_Playfair.v  lemma_Playfairhelper2.v  lemma_RTcongruence.v  lemma_RTsymmetric.v  lemma_TCreflexive.v  lemma_TGflip.v  lemma_TGsymmetric.v  lemma_TTflip2.v  lemma_altitudebisectsbase.v  lemma_altitudeofrighttriangle.v  lemma_angleaddition.v  lemma_angledistinct.v  lemma_angleorderrespectscongruence.v  lemma_angleorderrespectscongruence2.v  lemma_angleordertransitive.v  lemma_angletrichotomy.v  lemma_angletrichotomy2.v  (+152 more)
Elements/Statements/: Book_1.v  Book_3.v
Highschool/: Euler_line.v  SegmTrisect.v  bisector.v  circumcenter.v  concyclic.v  exercises.v  gravityCenter.v  incenter.v  midpoint_thales.v  orientation.v  orthocenter.v  sesamath_exercises.v  triangle_midpoints_theorems.v  triangles.v  varignon.v
Meta_theory/Continuity/: angle_archimedes.v  archimedes.v  archimedes_cantor_dedekind.v  aristotle.v  cantor_completeness.v  cantor_variant.v  completeness.v  dedekind_archimedes.v  dedekind_cantor.v  dedekind_completeness.v  dedekind_variant.v  elementary_continuity_props.v  first_order.v  first_order_dedekind_circle_circle.v  grad.v
Meta_theory/Counter_models/: coplanarity.v  counter_model_bet_identity.v  counter_model_segment_construction.v  tcp_ndc.v
Meta_theory/Decidability/: equivalence_between_decidability_properties_of_basic_relations.v
Meta_theory/Dimension_axioms/: upper_dim.v  upper_dim_2.v  upper_dim_3.v
Meta_theory/Elementary_continuity/: elementary_continuity_props.v
Meta_theory/Models/: POF_to_Tarski.v  beeson_to_tarski.v  euclid_to_tarski.v  gupta_inspired_to_tarski.v  hilbert_to_tarski.v  independent_tarski_to_tarski.v  tarski_to_beeson.v  tarski_to_coinc_theory_for_concyclic.v  tarski_to_cong_theory.v  tarski_to_euclid.v  tarski_to_gupta_inspired.v  tarski_to_hilbert.v  tarski_to_makarios.v
Meta_theory/Parallel_postulates/: Euclid.v  Euclid_def.v  SPP_ID.v  SPP_tarski.v  TCP_tarski.v  alternate_interior_angles_consecutive_interior_angles.v  alternate_interior_angles_playfair_bis.v  alternate_interior_angles_postulate_triangle.v  alternate_interior_angles_proclus.v  (+80 more)
Tactics/: finish.v
Tarski_dev/: Ch02_cong.v  Ch03_bet.v  Ch04_col.v  Ch04_cong_bet.v  Ch05_bet_le.v  Ch06_out_lines.v  Ch07_midpoint.v  Ch08_orthogonality.v  Ch09_plane.v  Ch10_line_reflexivity.v  Ch10_line_reflexivity_2.v  Ch10_line_reflexivity_2D.v  Ch11_angles.v  Ch12_parallel.v  Ch12_parallel_inter_dec.v  Ch13_1.v  Ch13_2_length.v  Ch13_3_angles.v  Ch13_4_cos.v  Ch13_5_Pappus_Pascal.v  Ch13_6_Desargues_Hessenberg.v  Ch14_order.v  Ch14_prod.v  Ch14_sum.v  Ch15_lengths.v  Ch15_pyth_rel.v  Ch16_coordinates.v  Ch16_coordinates_with_functions.v  Coplanar_perm.v  Coplanar_trans.v  Definitions.v  Msatz.v
Utils/: Mergesort.v  TCSets.v  all_equiv.v  arity.v  general_tactics.v  sets.v  triples.v
html/: Ch02_cong.html  Ch03_bet.html  Ch04_col.html  Ch04_cong_bet.html  Ch05_bet_le.html  Ch06_out_lines.html  Ch07_midpoint.html  Ch08_orthogonality.html  Ch09_plane.html  Ch10_line_reflexivity.html  Ch10_line_reflexivity_2D.html  Ch11_angles.html  Ch12_parallel.html  Ch12_parallel_inter_dec.html  Ch13_1.html  Ch13_2_length.html  Ch13_3_angles.html  Ch13_4_cos.html  Ch13_5_Pappus_Pascal.html  Ch13_6_Desargues_Hessenberg.html  Ch14_order.html  Ch14_prod.html  Ch14_sum.html  Ch15_lengths.html  Ch15_lengths1.html  Ch16_coordinates.html  CoappR.html  ColR.html  Coplanar_perm.html  Coplanar_trans.html  Coplanar_trans_1.html  Coplanar_trans_2.html  Coplanar_trans_3.html  Coplanar_trans_4.html  Edukera.html  Epsilon.html  Euclid.html  Euclid_1.html  Euclid_2.html  Euclid_aux.html  (+481 more)
theories/Algebraic/: POF_to_Tarski.v  coplanarity.v  dune  tcp_ndc.v
theories/Algebraic/Counter_models/Planar/: counter_model_bet_inner_transitivity.v  counter_model_bet_symmetry.v  counter_model_cong_identity.v  counter_model_cong_inner_transitivity.v  counter_model_cong_pseudo_reflexivity.v  counter_model_euclid.v  counter_model_five_segment.v  counter_model_lower_dim.v  counter_model_segment_construction.v  counter_model_upper_dim.v  gupta_inspired_to_independent_tarski.v  independence.v  independent_tarski_to_gupta_inspired.v  independent_version.v
theories/Algebraic/Counter_models/nD/: bet_identity.v  counter_model_bet_inner_transitivity.v  counter_model_bet_symmetry.v  counter_model_cong_identity.v  counter_model_cong_inner_transitivity.v  counter_model_cong_pseudo_reflexivity.v  counter_model_euclid.v  counter_model_five_segment.v  counter_model_lower_dim.v  counter_model_segment_construction.v  counter_model_upper_dim.v  dimensional_axioms.v  gupta_inspired_to_independent_version.v  independent_version.v  independent_version_to_beeson.v  independent_version_to_tarski.v  stability_properties.v  stronger_pasch.v
(+256 files in other folders)
