opam-version: "2.0"
maintainer:   "Pierre Boutry <contact@pierre.boutry.fr>"
version:      "dev"

homepage:     "http://geocoq.github.io/GeoCoq/"
dev-repo:     "git+https://github.com/GeoCoq/GeoCoq.git"
bug-reports:  "https://github.com/GeoCoq/GeoCoq/issues"
license:      "LGPL-3.0-only"

synopsis:     "A formalization of foundations of geometry in Coq"
description:  "This package depends on all subpackages."

depends: [
  "coq-geocoq-algebraic" { = version }
  "coq-geocoq-elements"  { = version }
]

tags: [
  "category:Mathematics/Geometry/General"
  "keyword:geometry"
  "keyword:neutral geometry"
  "keyword:Euclidean geometry"
  "keyword:hyperbolic geometry"
  "keyword:foundations"
  "keyword:Tarski"
  "keyword:Hilbert"
  "keyword:Euclid"
  "keyword:Elements"
  "keyword:Pappus"
  "keyword:Desargues"
  "keyword:arithmetization"
  "keyword:Pythagoras"
  "keyword:Thales' intercept theorem"
  "keyword:continuity"
  "keyword:ruler and compass"
  "keyword:parallel postulates"
  "keyword:model"
  "keyword:counter-model"
  "keyword:Cartesian space"
  "keyword:automation"
]
authors: [
  "Michael Beeson      <profbeeson@gmail.com>"
  "Gabriel Braun       <gabriel.braun@unistra.fr>"
  "Pierre Boutry       <contact@pierre.boutry.fr>"
  "Cyril Cohen         <cyril.cohen@inria.fr>"
  "Charly Gries        <charly.gries@etu.unistra.fr>"
  "Stéphane Kastenbaum <stephane.kastenbaum@gmail.com>"
  "Julien Narboux      <narboux@unistra.fr>"
  "Pascal Schreck      <schreck@unistra.fr>"
  "Freek Wiedijk       <freek@cs.ru.nl>"
]
