(coq.theory
 (name GeoCoq.Algebraic)
 (package coq-geocoq-algebraic)
 (synopsis "This subpackage contains a model of Tarski's axioms and some counter-models.")
 (flags -w -notation-overridden -w -ambiguous-paths)
 (theories GeoCoq.Coinc GeoCoq.Axioms GeoCoq.Main mathcomp))

(include_subdirs qualified)
